--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "axios": "^1.7.9",
-    "pinia": "^3.0.1"
+    "pinia": "^3.0.1",
+    "vue3-easy-data-table": "^1.5.47"
   },
   "devDependencies": {
     "sass": "^1.86.3"
