--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,10 +11,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Login into the Container registry
-        uses: docker/login-action@v3
+      - name: Connexion à GHCR
+        uses: docker/login-action@v2
         with:
-          registry: https://ghcr.io
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push Docker image
@@ -32,10 +32,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Login to the Container registry
-        uses: docker/login-action@v3
+      - name: Connexion à GHCR
+        uses: docker/login-action@v2
         with:
-          registry: https://ghcr.io
+          registry: ghcr.io
           username: ${{ secrets.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push Docker image
