Test avec le déploiement de l'image

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Connexion à GHCR
         uses: docker/login-action@v2
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
+          registry: https://ghcr.io
+          username: Triitx
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
@@ -25,8 +25,8 @@ jobs:
           context: api
           push: true
           tags: |
-            ghcr.io/${{ github.repository }}:api-latest
-            ghcr.io/${{ github.repository }}:api-${{ github.sha }}
+            ghcr.io/api:latest
+            ghcr.io/api:${{ github.sha }}
 
   build-image-spa:
     permissions: write-all
