--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -37,8 +37,8 @@ jobs:
       - name: Connexion à GHCR
         uses: docker/login-action@v2
         with:
-          registry: ghcr.io
-          username: ${{ secrets.actor }}
+          registry: https://ghcr.io
+          username: Triitx
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
