--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,8 +25,8 @@ jobs:
           context: api
           push: true
           tags: |
-            ghcr.io/${{ github.repository }}-api:latest
-            ghcr.io/${{ github.repository }}-api:${{ github.sha }}
+            ghcr.io/api:latest
+            ghcr.io/api:${{ github.sha }}
 
   build-image-spa:
     permissions: write-all
@@ -46,5 +46,5 @@ jobs:
           context: spa
           push: true
           tags: |
-            ghcr.io/${{ github.repository }}-spa:latest
-            ghcr.io/${{ github.repository }}-spa:${{ github.sha }}
+            ghcr.io/spa:latest
+            ghcr.io/spa:${{ github.sha }}
