Test avec le déploiement de l'image

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,9 +13,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - id: toLowerCase
-        run: |
-          echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
       - name: Connexion à GHCR
         uses: docker/login-action@v2
         with:
@@ -28,8 +25,8 @@ jobs:
           context: api
           push: true
           tags: |
-            ghcr.io/${REPO}-api:latest
-            ghcr.io/${REPO}-api:${{ github.sha }}
+            ghcr.io/triitx/windigo-serigraphie-projet-api:latest
+            ghcr.io/triitx/windigo-serigraphie-projet-api:${{ github.sha }}
 
   build-image-spa:
     permissions: write-all
@@ -37,9 +34,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - id: toLowerCase
-        run: |
-          echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
       - name: Connexion à GHCR
         uses: docker/login-action@v2
         with:
@@ -52,5 +46,5 @@ jobs:
           context: spa
           push: true
           tags: |
-            ghcr.io/${REPO}-spa:latest
-            ghcr.io/${REPO}-spa:${{ github.sha }}
+            ghcr.io/triitx/windigo-serigraphie-projet-spa:latest
+            ghcr.io/triitx/windigo-serigraphie-projet-spa:${{ github.sha }}
